css changes to stop modals adding overflow

--- a/styles/resources/css/custom.css
+++ b/styles/resources/css/custom.css
@@ -118,6 +118,9 @@
     white-space: nowrap;
 	border-top: 0;
 }
+.modal-open {
+	overflow: auto;
+}
 
 @media (max-width: 375.98px) {
 	.app-header.navbar .nav-item {
